// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Circle should render 1`] = `
<div>
  <div
    class="Circle-uw7h4j-0 kiSYWh"
  />
</div>
`;

exports[`Circle should render as avatar 1`] = `
<div>
  <div
    class="Circle-uw7h4j-0 cYKpLE"
  />
</div>
`;

exports[`Circle should render as blank 1`] = `
<div>
  <div
    class="Circle-uw7h4j-0 kiSYWh"
  />
</div>
`;

exports[`Circle should render extra-large 1`] = `
<div>
  <div
    class="Circle-uw7h4j-0 buZgKe"
  />
</div>
`;

exports[`Circle should render large 1`] = `
<div>
  <div
    class="Circle-uw7h4j-0 JkqUV"
  />
</div>
`;

exports[`Circle should render small 1`] = `
<div>
  <div
    class="Circle-uw7h4j-0 gScSiC"
  />
</div>
`;

exports[`Circle should render with content 1`] = `
<div>
  <div
    class="Circle-uw7h4j-0 gScSiC"
  >
    <div
      data-testid="circle__content"
    />
  </div>
</div>
`;

exports[`Circle should render with no shadow 1`] = `
<div>
  <div
    class="Circle-uw7h4j-0 blBpcG"
  />
</div>
`;
